Fri Aug  5 02:48:47 CEST 2005 (tk)
----------------------------------
  * libclamav: merge PESpin unpacker from aCaB

Wed Aug  3 16:28:20 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: cli_rmdirs: ENOTEMPTY is EBADF on AIX (thanks to
			Tayfun Asker <tasker*metu.edu.tr>)

Wed Aug  3 16:16:59 CEST 2005 (tk)
----------------------------------
  * freshclam: --on-outdated-execute: do not trigger on f-level warning (which
	       in most cases means software was linked against improper
	       version of libclamav); add support for %v (new version string)
	       in command string

Wed Aug  3 09:56:33 BST 2005 (trog)
-----------------------------------
  * libclamav/chmunpack.c: Fix possible memory leak (TK)

  * libclamav/vba_extract.c: Fix zero allocation warning.

Wed Aug  3 04:57:36 CEST 2005 (tk)
----------------------------------
  * freshclam: add new option --on-update-execute (OnUpdateExecute). Requested
	       by Per Jessen

Sat Jul 30 11:09:47 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Improved parsing

Tue Jul 26 03:31:12 CEST 2005 (tk)
----------------------------------
  * libclamav: add support for Zip SFX unpacking (patch by Sven Strickroth
	       <sven*clamav.net>)

Tue Jul 26 02:54:18 CEST 2005 (tk)
----------------------------------
  * configure.in: --disable-cr was not working properly, reported by Stephane
		  Leclerc <sleclerc*aliastec.net>

Fri Jul 22 23:15:20 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Remove allocation of 0 bytes if ascii85decode decodes
				to 0 bytes. Bug reported by Christoph.

Thu Jul 21 03:47:03 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: cli_rmdirs: fix possible infinite loop. Patch by Mark
			Pizzolato.

Wed Jul 20 03:41:00 CEST 2005 (tk)
----------------------------------
  * libclamav/mspack: some cab archives were not properly decompressed (problem
		      reported by Diego d'Ambra <diego*clamav.net>)
